--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,13 @@
   --mainWhite: rgb(225, 233, 236);
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+
 body {
   font-family: var(--mainFont), sans-serif;
   background: var(--mainWhite);
@@ -20,135 +27,130 @@ body {
   margin: 0;
   padding-top: 0;
 }
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+
+/* Main Layout */
+.layout {
+  display: grid;
+  grid-template-columns: auto 850px 350px auto;
+  grid-template-rows: 60px auto 30px;
+  grid-template-areas: 
+  "l n n r"
+  "l c t r"
+  "l f f r";
+  grid-row-gap: 10px;
+  background-color: var(--mainWhite);
+  height: 100vh;
 }
 
-.nav-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 30px 10%;
-  background-color: #24252a;
-}
-
-.logo {
-  cursor: pointer;
-  font-family: var(--logoFont);
+/* Navbar */
+.navbar {
+  grid-area: n;  
+  background-color: rgb(40, 44, 56);
   color: aliceblue;
+  display: flex;
+  padding: 10px;
+  align-items: center;
+  justify-content: space-between;
   text-transform: uppercase;
 }
-
-.nav__links a,
-.cta,
-.overlay__content a {
-  font-family: var(--mainFont);
-  letter-spacing: -.7px;
-  font-weight: 500;
-  color: #edf0f1;
+.logo {
+  font-family: var(--logoFont);
+  font-size: 1.1em;
+  letter-spacing: -.8px;
+}
+.links {
+  display: flex;
+  justify-content: space-around;
+  width: 25%;
+  font-size: 11px;
   text-decoration: none;
+  font-weight: bold;
 }
-
-.nav__links {
+.links > li {
   list-style: none;
-  display: flex;
-}
-
-.nav__links li {
-  padding: 0px 20px;
-}
-
-.nav__links li a {
-  transition: all 0.3s ease 0s;
-}
-
-.nav__links li a:hover {
-  color: #0088a9;
-}
-
-.cta {
-  padding: 9px 25px;
-  background-color: rgba(0, 136, 169, 1);
-  border: none;
-  border-radius: 50px;
+  white-space: nowrap;
+  padding: 7px;
   cursor: pointer;
-  transition: all 0.3s ease 0s;
 }
-
-.cta:hover {
-  background-color: rgba(0, 136, 169, 0.8);
-}
-
-/* Mobile Nav */
-
-.menu {
-  display: none;
-}
-
-.overlay {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  background-color: #24252a;
-  overflow-x: hidden;
-  transition: all 0.5s ease 0s;
-}
-
-.overlay__content {
+/* Sidebar */
+.sidebar {
+  grid-area: t;
+  justify-self: center;
+  background-color: rgb(94, 94, 116);
   display: flex;
-  height: 100%;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  width: 100%;
 }
-
-.overlay a {
-  padding: 15px;
-  font-size: 36px;
-  display: block;
-  transition: all 0.3s ease 0s;
-}
-
-.overlay a:hover,
-.overlay a:focus {
-  color: #0088a9;
-}
-.overlay .close {
-  position: absolute;
-  top: 20px;
-  right: 45px;
-  font-size: 60px;
-  color: #edf0f1;
-}
-
-@media screen and (max-height: 450px) {
-  .overlay a {
-    font-size: 20px;
-  }
-  .overlay .close {
-    font-size: 40px;
-    top: 15px;
-    right: 35px;
-  }
-}
-
-@media only screen and (max-width: 800px) {
-  .nav__links,
-  .cta {
-    display: none;
-  }
-  .menu {
-    display: initial;
-  }
-}
-
-.wraper {
+/* Content Area*/
+.content-container {
+  grid-area: c;
   display: grid;
-  grid-template-columns: 4fr 1fr;
-  background-color: #eee;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  grid-column-gap: 5px;
+  /* background-color: rgb(149, 182, 171); */
+  justify-items: center;
 }
+
+/* Content Col 1 */
+.point-table {
+  margin-top: 20px;
+  width: 400px;
+  min-height: 400px;
+  padding: .5em;
+}
+.title {
+  display: grid;
+  margin: 10px 3px;
+  grid-template-columns: auto 1fr;
+  /* justify-content: space-between; */
+  align-items: center;
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.title > hr {
+  grid-column-start: 2;
+  margin: 10px 10px; 
+}
+.title > span {
+  min-width: 100px;
+  text-align: center;
+}
+
+
+/* Footer */
+footer {
+  grid-area: f;
+  background-color: #2F3342;
+  color: aliceblue;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+
+
+/* Customize website's scrollbar like Mac OS
+Not supports in Firefox and IE */
+
+/* total width */
+body::-webkit-scrollbar {
+  background-color:#fff;
+  width:13px
+}
+
+/* background of the scrollbar except button or resizer */
+body::-webkit-scrollbar-track {
+  background-color:#fff
+}
+
+/* scrollbar itself */
+body::-webkit-scrollbar-thumb {
+  background-color:#babac0;
+  border-radius:16px;
+  border:2px solid #fff
+}
+
+/* set button(top and bottom of the scrollbar) */
+body::-webkit-scrollbar-button {display:none}
