--- a/src/App.css
+++ b/src/App.css
@@ -75,10 +75,11 @@ body {
 /* Sidebar */
 .sidebar {
   grid-area: t;
-  justify-self: center;
-  background-color: rgb(94, 94, 116);
-  display: flex;
-  width: 100%;
+  /* background-color: rgb(94, 94, 116); */
+  display: grid;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding-left: 5%;
 }
 /* Content Area*/
 .content-container {
@@ -154,3 +155,19 @@ body::-webkit-scrollbar-thumb {
 
 /* set button(top and bottom of the scrollbar) */
 body::-webkit-scrollbar-button {display:none}
+
+/* Sidebar Scrollbar */
+.sidebar::-webkit-scrollbar {
+  width: 4px;
+}
+
+ 
+.sidebar::-webkit-scrollbar-track {
+   -webkit-box-shadow: inset 0 0 6px rgba(168, 158, 158, 0.3); 
+   border-radius: 10px;
+}
+
+.sidebar::-webkit-scrollbar-thumb {
+   border-radius: 10px;
+   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+} 
